<resources>
    <string name="app_name">Home App</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No internet connection. Please check and try again</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="employer">Employer</string>
    <string name="employee">Employee</string>
    <string name="title_activity_maps">Map</string>
    <string name="full_name">full name</string>
    <string name="username">Username</string>
    <string name="register_an_employer_account">Register an employer account?</string>
    <string name="name">Name  :</string>
    <string name="phone_number">Phone number  :</string>
    <string name="skills">Skills  :</string>
    <string name="save">Save</string>
    <string name="register_an_employee_account">register an employee account</string>
    <string name="title_activity_test_map">Map</string>
    <string name="picked_employer">picked employer</string>
    <string name="destination">Destination: —</string>
    <string name="_5">5</string>
    <string name="rate">Rate</string>
    <string name="todo">TODO</string>
    <string name="maintenance">Maintenance and Repair</string>
    <string name="home_care">Home Care</string>
    <string name="freelance">Freelance</string>
    <string name="search_employee">Search Employee</string>
    <string name="accept">Accept</string>
    <string name="logo_home_app">Logo_home_app</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS is disabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="title_activity_employee_map">Map</string>
    <string name="title_activity_employer_map">Map</string>
    <string name="employee_login_title">Login as Employee</string>
    <string name="employer_login_title">Login as Employer</string>
    <string name="employee_registration_title">Register as Employee</string>
    <string name="employer_registration_title">Register as Employer</string>
    <string name="as_an_employer">As an Employer</string>
    <string name="available">Available</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="title_activity_test">Map</string>
    <string name="ok">OK</string>
    <string name="title_location_permission">location permission</string>
    <string name="as_an_employee">Register as Employee</string>
    <string name="manual_laborer">Manual Laborer</string>
    <string name="profile">Profile</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="getting_employee">Getting you a Employee…</string>
    <string name="service">Service  :</string>
    <string name="tel">Tel  :</string>
    <string name="_0">0</string>
    <string name="no">No</string>
    <string name="image">Set Image</string>
    <string name="searching">Searching....</string>
    <string name="back">Back</string>
</resources>