<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/employer_background"
    tools:context=".users.employees.EmployeeSettingsActivity"
    android:gravity="center_horizontal">
    <LinearLayout
        android:id="@+id/profileImage_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:src="@mipmap/profile_placeholder_round"
            android:contentDescription="@string/profile"
            android:background="@color/AliceBlue"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/text_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profileImage_ll"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/skill"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/skills"
            android:inputType="text"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input"
            android:gravity="start"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/maintenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintenance"
                android:textColor="@color/DarkBlue" />
            <RadioButton
                android:id="@+id/freelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freelance"
                android:textColor="@color/DarkBlue" />
        </RadioGroup>
        <TextView
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/employee_ratebar"
            android:clickable="false"
            android:background="@drawable/ratings_red"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ll"
        >
        <Button
            android:id="@+id/confirm"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blue_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blue_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>