<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/employer_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".users.employers.EmployerRegistrationActivity">

    <LinearLayout
        android:id="@+id/input_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_ll"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <EditText
            android:id="@+id/registerFull_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/white_button"
            android:text="@string/login"
            android:textColor="@color/blue" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttons_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">
        <TextView
            android:id="@+id/as_an_employee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="@string/as_an_employee"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>