<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/employee_background"
    android:gravity="center_horizontal">
<LinearLayout
    android:id="@+id/profileImage_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">
    <ImageView
        android:id="@+id/profileImage"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:src="@drawable/ic_baseline_account_circle_24"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/text_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profileImage_ll"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <EditText
            android:id="@+id/skill"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/skills"
            android:inputType="text"
            android:textColor="@color/DarkBlue"
            android:textColorHint="@color/black"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/text_input"
            android:gravity="start"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/maintenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintenance"
                android:textColor="@color/DarkBlue" />
            <RadioButton
                android:id="@+id/freelance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freelance"
                android:textColor="@color/DarkBlue" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ll"
        >
        <Button
            android:id="@+id/confirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/blue_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>