<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/employee_background"
    tools:context=".users.employees.EmployeeLoginActivity">
<LinearLayout
    android:id="@+id/input_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:gravity="center_horizontal"
    android:paddingTop="100dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/email_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_action_user" />
    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_action_pass" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="150dp"
        android:paddingBottom="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button"
            android:textColor="@color/blue"
            android:paddingEnd="30dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/registration_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/blue_button"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="10dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/buttons_ll">
        <TextView
            android:id="@+id/as_an_employer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="@string/as_an_employer"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>