<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".LauncherActivity">

    <LinearLayout
        android:id="@+id/logo_ll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/content_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginBottom="110dp"
            android:contentDescription="@string/logo_home_app"
            app:srcCompat="@drawable/home_app_logo_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_ll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <Button
                android:id="@+id/employee_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/blue_button"
                android:text="@string/employee"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <Button
                android:id="@+id/employer_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/white_button"
                android:text="@string/employer"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>